New Crowdin updates (#1656)

--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "Do not translate.",
   "api.errors.invalidWitnessError": "Die Signatur ist ungültig.",
   "api.errors.noInputsError": "Die wiederhergestellte Wallet ist leer. Bitte überprüfe die Wiederherstellungs-Phrase und versuche es noch einmal.",
+  "api.errors.noOutputsError": "Die Transaktion benötigt mindestens eine Ausgabe, es wurde aber keine angegeben",
   "api.errors.pendingTransactionError": "Fehler beim Aktualisieren der ausstehenden Transaktionen.",
   "api.errors.poolMissingApiError": "Pool nicht auffindbar. Überprüfe bitte noch einmal die ID und vergewissere dich, dass der Pool nicht de-registriert wurde.",
   "api.errors.rollbackApiError": "Ein Rollback wurde erkannt.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "Entfernen",
   "global.labels.rewardsLabel": "Erträge",
   "global.labels.save": "Speichern",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Aktualisieren",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "Wiederhergestellter Kontostand",
   "transfer.summary.transactionFee.label": "Transaktionsgebühren",
   "transfer.summary.transferButton.label": "Geld überweisen",
+  "upgradetx.explanation": "Wir haben ein paar ADA in Deiner Byron-Ära Wallet gefunden. Möchtest Du sie in deine Shelley Wallet übertragen?",
   "uri.display.dialog.copy.notification": "URL erfolgreich kopiert",
   "uri.display.dialog.title": "Generierte URL",
   "uri.display.dialog.usabilityWarning": "Dieser Link kann nur von Benutzern geöffnet werden, die Yoroi in ihrem Browser installiert haben",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "Das Shelley Protokoll upgrade bringt einen neuen Shelley wallet Typ, welcher Delegierungen ermöglicht.",
   "wallet.deprecation.byronLine2": "Um Deine ADA zu delegieren, musst Du auf eine Shelley Wallet upgraden.",
   "wallet.hw.common.error.101": "Notwendige Berechtigungen wurden vom Benutzer nicht erteilt. Bitte erneut versuchen.",
+  "wallet.hw.incorrectDevice": "Ungültiges Gerät erkannt. Erwartetes Gerät {expectedDeviceId}, aber {responseDeviceId} gefunden. Bitte schließe das richtige Gerät an",
+  "wallet.hw.incorrectVersion": "Ungültige Gerätversion erkannt. Wir unterstützen Version {supportedVersions}, Du hast aber Version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Die Operation wurde auf dem Ledger Gerät abgebrochen.",
   "wallet.hw.ledger.common.error.102": "Die Operation wurde vom Benutzer abgebrochen.",
   "wallet.hw.ledger.common.error.103": "Das Ledger Gerät ist gesperrt, bitte entsperren und wiederholen.",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Auszahlungen",
   "wallet.transfer.cards.byron": "Byron-Ära wallet",
   "wallet.transfer.cards.shelley": "Shelley-Ära wallet",
+  "wallet.transfer.deregister.deregister": "Deregistrierung",
+  "wallet.transfer.deregister.keep": "Registriert lassen",
+  "wallet.transfer.deregister.line1": "Es besteht die Möglichkeit mit dem Abrufen der Erträge auch den Staking Key zu de-registrieren",
+  "wallet.transfer.deregister.line2": "Mit einer De-Registrierung erhält man die Registrierungsgebühr zurück und  entfernt die Delegierung von jeglichem Pool",
+  "wallet.transfer.deregister.line3": "Man kann den Staking key auch behalten wenn man die Erträge abruft, und delegiert somit weiterhin zum selben Pool",
+  "wallet.transfer.deregister.line4": "Du solltest NICHT de-registrieren wenn dieser staking-Key als Pools reward account verwendet wird, weil damit alle Pool Operator Erträge direkt in die Treasury Schatztruhe gesendet werden",
+  "wallet.transfer.deregister.title": "Soll der Staking Key de-registriert werden?",
   "wallet.transfer.instruction": "Alle beantragten ADA werden in die gerade ausgewählte Wallet übertragen",
   "wallet.undelegation.transaction.explanationLine1": "Du musst NICHT undelegieren bevor Du zu einem anderen Stake pool wechselst",
   "wallet.undelegation.transaction.explanationLine2": "Es wird nach dem Ende der aktuellen Epoche 2 weitere Epochen dauern bis die Undelegierung effektiv wird",
