--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "La frase de recuperación ingresada es inválida. Por favor, verifica que sea la correcta.",
   "api.errors.invalidWitnessError": "La firma es inválida.",
   "api.errors.noInputsError": "La billetera restaurada a partir de tu frase de recuperación está vacía. Por favor, verifica tu frase de recuperación, e intenta restaurar la billetera nuevamente.",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "Error al actualizar las transacciones pendientes.",
   "api.errors.poolMissingApiError": "No se pudo localizar este stake pool. Revisa su ID y asegúrate de que no fue dado de baja.",
   "api.errors.rollbackApiError": "Se detectó un retroceso.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "Remover",
   "global.labels.rewardsLabel": "Recompensas",
   "global.labels.save": "Guardar",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Actualización",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "Saldo recuperado",
   "transfer.summary.transactionFee.label": "Comisiones por transacción",
   "transfer.summary.transferButton.label": "Transferir fondos",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "La URL ha sido copiada exitosamente",
   "uri.display.dialog.title": "URL generada",
   "uri.display.dialog.usabilityWarning": "Este enlace sólo puede ser abierto por usuarios que tengan Yoroi instalado en su navegador",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "La actualización del protocolo de Shelley añade un nuevo tipo de billetera de Shelley que permite la delegación.",
   "wallet.deprecation.byronLine2": "Para delegar tus ADA deberás actualizar tu billetera a una de Shelley.",
   "wallet.hw.common.error.101": "Los permisos necesarios no fueron concedidos por el usuario. Por favor, inténtalo de nuevo.",
+  "wallet.hw.incorrectDevice": "Se ha detectado un dispositivo incorrecto. El dispositivo esperado era {expectedDeviceId}, pero se obtuvo el dispositivo {responseDeviceId}. Por favor, conecta el dispositivo correcto",
+  "wallet.hw.incorrectVersion": "Se ha detectado una versión incorrecta del dispositivo. Tienes la versión {responseVersion}, pero Yoroi soporta la versión {supportedVersions}.",
   "wallet.hw.ledger.common.error.101": "Operación cancelada en el dispositivo Ledger.",
   "wallet.hw.ledger.common.error.102": "Operación cancelada por el usuario.",
   "wallet.hw.ledger.common.error.103": "El dispositivo Ledger está bloqueado. Por favor, desbloquéalo y vuelve a intentarlo.",
@@ -493,9 +498,9 @@
   "wallet.nav.type.paper": "Billetera de Papel",
   "wallet.nav.type.standard": "Billetera estándar",
   "wallet.nav.type.trezor": "Dispositivo Trezor",
-  "wallet.navigation.delegationById": "Delegation by Id",
+  "wallet.navigation.delegationById": "Delegaciones por Id",
   "wallet.navigation.delegationDashboard": "Seguimiento",
-  "wallet.navigation.delegationList": "Delegation List",
+  "wallet.navigation.delegationList": "Lista de delegaciones",
   "wallet.navigation.receive": "Recibir",
   "wallet.navigation.send": "Enviar",
   "wallet.navigation.transactions": "Transacciones",
@@ -531,7 +536,7 @@
   "wallet.receive.page.noResultsFoundLabel": "No se encontraron resultados",
   "wallet.receive.page.notFoundAnyAddresses": "No pudimos encontrar ninguna dirección que coincida con tu búsqueda.",
   "wallet.receive.page.outputAmountUTXO": "Saldo (sumarización del UTxO)",
-  "wallet.receive.page.rewardAddressLine1": "Su dirección de recompensa contiene sus recompensas y se utiliza para validar cualquier cambio en su preferencia de delegación",
+  "wallet.receive.page.rewardAddressLine1": "La dirección de recompensa contiene tus recompensas, y se utiliza para validar cualquier cambio en tu preferencia de delegación",
   "wallet.receive.page.rewardAddressLine2": "No puedes enviar ADA a direcciones de recompensa, pero la mostramos para propósitos de auditoría personal",
   "wallet.receive.page.unmangeLabel": "Corregir la preferencia de delegación",
   "wallet.receive.page.verifyAddressLabel": "Verifica la dirección",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Retiros",
   "wallet.transfer.cards.byron": "Billetera de la era Byron",
   "wallet.transfer.cards.shelley": "Billetera de la era Shelley",
+  "wallet.transfer.deregister.deregister": "Desregistrar",
+  "wallet.transfer.deregister.keep": "Mantener el registro",
+  "wallet.transfer.deregister.line1": "Al retirar las recompensas, también tienes la opción de desregistrar la clave de delegación",
+  "wallet.transfer.deregister.line2": "Desregistrando la clave de delegación recuperarás tu depósito y retirarás la clave sobre cualquier pool",
+  "wallet.transfer.deregister.line3": "Manteniendo la clave de delegación te permitirá retirar las recompensas, pero continuarás delegando en el mismo pool",
+  "wallet.transfer.deregister.line4": "NO debes desregistrarte si esta clave de delegación se utiliza como una cuenta de recompensa del pool, ya que esto hará que todas las recompensas del operador del pool sean enviadas directamente a la tesorería",
+  "wallet.transfer.deregister.title": "¿También desregistrar la clave de delegación?",
   "wallet.transfer.instruction": "Toda ADA reclamada será transferida a la billetera actualmente seleccionada",
   "wallet.undelegation.transaction.explanationLine1": "NO es necesario que canceles la delegación antes de cambiar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Tomará 2 epochs, a partir del final del epoch actual, para que la des-delegación se haga efectiva",
