--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "do not translate",
   "api.errors.invalidWitnessError": "La signature n’est pas valide.",
   "api.errors.noInputsError": "Le wallet restauré à partir de votre phrase de secours est vide. Veuillez vérifier votre phrase de secours and retenter de restaurer le wallet.",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "Erreur lors de la mise à jour des transactions en cours.",
   "api.errors.poolMissingApiError": "Nous n'avons pas pu trouver ce groupe d'enjeu. Veuillez vérifier l'identifiant (ID) et assurez-vous qu'il ne s'est pas désinscrit.",
   "api.errors.rollbackApiError": "Un retour en arrière a été détecté.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "Enlever",
   "global.labels.rewardsLabel": "Récompenses",
   "global.labels.save": "Sauvegarder",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Mettre à jour",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "Solde recouvert",
   "transfer.summary.transactionFee.label": "Frais de transaction",
   "transfer.summary.transferButton.label": "Transférer des fonds",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL copiée avec succès",
   "uri.display.dialog.title": "URL générée",
   "uri.display.dialog.usabilityWarning": "Ce lien ne peut être ouvert que par des utilisateurs ayant installé Yoroi sur leurs navigateurs",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "La mise à jour du protocole Shelley ajoute un nouveau type de portefeuille Shelley qui permet la délégation.",
   "wallet.deprecation.byronLine2": "Pour déléguer votre ADA, vous devrez passer à un portefeuille Shelley.",
   "wallet.hw.common.error.101": "Les autorisations nécessaires n'ont pas été fournies par l'utilisateur. Veuillez réessayer.",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Opération annulée sur le Ledger.",
   "wallet.hw.ledger.common.error.102": "Opération annulée par l'utilisateur.",
   "wallet.hw.ledger.common.error.103": "Ledger est verrouillé, veuillez le déverrouiller et réessayer.",
@@ -493,9 +498,9 @@
   "wallet.nav.type.paper": "Wallet Papier",
   "wallet.nav.type.standard": "Wallet standard",
   "wallet.nav.type.trezor": "Wallet Trezor",
-  "wallet.navigation.delegationById": "Delegation by Id",
+  "wallet.navigation.delegationById": "Délégations par Id",
   "wallet.navigation.delegationDashboard": "Tableau de bord",
-  "wallet.navigation.delegationList": "Delegation List",
+  "wallet.navigation.delegationList": "Liste des délégations",
   "wallet.navigation.receive": "Recevoir",
   "wallet.navigation.send": "Envoyer",
   "wallet.navigation.transactions": "Transactions",
@@ -531,7 +536,7 @@
   "wallet.receive.page.noResultsFoundLabel": "Pas de résultats trouvés",
   "wallet.receive.page.notFoundAnyAddresses": "Nous n'avons trouvé aucune adresse correspondant à vos critères.",
   "wallet.receive.page.outputAmountUTXO": "Solde (somme des UTXO)",
-  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine1": "Votre adresse de récompense contient vos récompenses et est utilisée pour valider tout changement dans vos préférences de délégation",
   "wallet.receive.page.rewardAddressLine2": "Vous ne pouvez pas envoyer d'ADA sur des adresses de récompenses, mais nous vous le montrons à des fins d'audit personnel",
   "wallet.receive.page.unmangeLabel": "Corriger la préférence de délégation",
   "wallet.receive.page.verifyAddressLabel": "Vérifier l'adresse",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Retraits",
   "wallet.transfer.cards.byron": "Wallet de l'ère Byron",
   "wallet.transfer.cards.shelley": "Wallet de type Shelley",
+  "wallet.transfer.deregister.deregister": "Désenregistrer",
+  "wallet.transfer.deregister.keep": "Maintenir l'enregistrement",
+  "wallet.transfer.deregister.line1": "Lors du retrait des récompenses, vous avez également la possibilité de révoquer la clé de mise en jeu",
+  "wallet.transfer.deregister.line2": "En désinscrivant la clé de mise en jeu, vous récupérerez votre dépôt et révoquez toute délégation en cours",
+  "wallet.transfer.deregister.line3": "En conservant la clé de mise en jeu, vous pourrez retirer les récompenses, mais continuer à déléguer au même pool",
+  "wallet.transfer.deregister.line4": "Vous devez PAS désinscrire cette clé d'enjeu si elle est utilisée comme compte de récompense d'un pool, car cela entraînera l'envoi direct de toutes les récompenses de l'opérateur du pool à la trésorerie",
+  "wallet.transfer.deregister.title": "Désinscrire également la clé de mise en jeu ?",
   "wallet.transfer.instruction": "Tout ADA réclamé sera transféré dans votre portefeuille actuellement sélectionné",
   "wallet.undelegation.transaction.explanationLine1": "Vous n'avez PAS besoin d'arrêter une délégation avant de changer de groupe d'enjeu (pool)",
   "wallet.undelegation.transaction.explanationLine2": "Cela prendra 2 époques après la fin de l'époque courante pour que votre choix d'arrêter de déléguer soit effectif",
