--- a/app/i18n/locales/hr-HR.json
+++ b/app/i18n/locales/hr-HR.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "Invalid phrase entered, please check.",
   "api.errors.invalidWitnessError": "The signature is invalid.",
   "api.errors.noInputsError": "The wallet restored from your recovery phrase is empty. Please check your recovery phrase and attempt restoration again.",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "Error while updating pending transactions.",
   "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Rollback was detected.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "Remove",
   "global.labels.rewardsLabel": "Rewards",
   "global.labels.save": "Save",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "Recovered balance",
   "transfer.summary.transactionFee.label": "Transaction fees",
   "transfer.summary.transferButton.label": "Transfer Funds",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL successfully copied",
   "uri.display.dialog.title": "Generated URL",
   "uri.display.dialog.usabilityWarning": "This link can only be opened by users with Yoroi installed on their browser",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
   "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Necessary permissions were not granted by the user. Please retry.",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Operation cancelled on Ledger device.",
   "wallet.hw.ledger.common.error.102": "Operation cancelled by user.",
   "wallet.hw.ledger.common.error.103": "Ledger device is locked, please unlock it and retry.",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
+  "wallet.transfer.deregister.deregister": "Deregister",
+  "wallet.transfer.deregister.keep": "Keep registered",
+  "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
+  "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
+  "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any ADA claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
