--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "La frase inserita non è valida, si prega di controllare.",
   "api.errors.invalidWitnessError": "La firma non è valida.",
   "api.errors.noInputsError": "Il portafoglio ripristinato dalla frase di recupero è vuoto. Si prega di controllare la frase di recupero e tentare nuovamente il ripristino.",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "Errore durante l'aggiornamento delle transazioni in sospeso.",
   "api.errors.poolMissingApiError": "Non riuscivo a trovare questo pool. Ricontrolla l'ID e assicurati che il pool non sia stato cancellato.",
   "api.errors.rollbackApiError": "Rollback rilevato.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "Rimuovere",
   "global.labels.rewardsLabel": "Ricompense",
   "global.labels.save": "Salvare",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Aggiornamento",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -155,7 +157,7 @@
   "profile.complexityLevel.simple": "Semplice",
   "profile.complexityLevel.simple.description": "L'esperienza più semplice possibile. Non sono richieste conoscenze precedenti in Blockchain. Altamente amichevole per i principianti, e per gli utenti che preferiscono la semplicità.",
   "profile.complexityLevel.subtitle": "Capire le blochchain può essere difficile, per questo cercheremo di mantenere l'interfaccia il più semplice possibile per voi",
-  "profile.complexityLevel.title": "Level of Interface Complexity",
+  "profile.complexityLevel.title": "Livello di complessità dell'interfaccia",
   "profile.languageSelect.form.languageSelectLabel": "Seleziona la tua lingua",
   "profile.languageSelect.title": "Seleziona lingua",
   "profile.nightly.acknowledgedRisks": "Sono consapevole del rischio",
@@ -167,12 +169,12 @@
   "profile.nightly.warning1": "Yoroi Nightly NON funziona su false blockchain o server di test.",
   "profile.nightly.warning2": "Tutte le transazioni inviate saranno visibili sulla catena e nei server di produzione.",
   "profile.nightly.warningHeader": "Per simulare un ambiente di produzione:",
-  "profile.privacypolicy.header": "Yoroi will...",
-  "profile.privacypolicy.neverAnalytics": "<strong>Never</strong> run any analytics software or 3rd party trackers.",
-  "profile.privacypolicy.neverProfile": "<strong>Never</strong> create profiles with your information.",
-  "profile.privacypolicy.neverSell": "<strong>Never</strong> sell your data.",
-  "profile.privacypolicy.neverTrack": "<strong>Never</strong> track your behavior.",
-  "profile.privacypolicy.serverLogs": "Any server log is kept for at most 2 weeks purely for server troubleshooting purposes.",
+  "profile.privacypolicy.header": "Yoroi...",
+  "profile.privacypolicy.neverAnalytics": "<strong>non</strong>  eseguirà mai alcun software di analisi o tracker di terze parti",
+  "profile.privacypolicy.neverProfile": "<strong>non</strong> creerà mai profili con le vostre informazioni.",
+  "profile.privacypolicy.neverSell": "<strong>non</strong> venderà mai i tuoi dati.",
+  "profile.privacypolicy.neverTrack": "<strong>non</strong> rintraccerà mai il tuo comportamento.",
+  "profile.privacypolicy.serverLogs": "Qualsiasi logfile viene conservato per un massimo di 2 settimane esclusivamente per la risoluzione dei problemi del server.",
   "profile.termsOfUse.checkboxLabel": "Accetto i termini di utilizzo",
   "profile.termsOfUse.title": "Condizioni d'uso",
   "profile.uriAccept.seePrompt": "Semplicemente <strong> fai clic su <em> Consenti </em></strong> per abilitare gli URL di pagamento",
@@ -283,7 +285,7 @@
   "transfer.form.masterkey.input.label": "Chiave principale",
   "transfer.form.masterkey.requirement": "Nota: le chiavi principali sono composte da 192 caratteri e con codifica esadecimale",
   "transfer.instructions.attention.title.label": "Attenzione",
-  "transfer.instructions.fee.source.disclaimer": "The transaction fee to claim funds will be paid by the wallet you currently have selected.",
+  "transfer.instructions.fee.source.disclaimer": "La commissione di transazione per richiedere i fondi sarà pagata dal portafoglio che hai selezionato.",
   "transfer.instructions.hardware.disclaimer.checkbox": "Sono consapevole del fatto che entrare la frase di recupero del mio portafoglio hardware comporta un considerevole rischio.",
   "transfer.instructions.hardware.disclaimer.instructions1": "Quando avete impostato originariamente il vostro portafoglio hardware, vi è stato chiesto di scrivere una frase di recupero su un pezzo di carta. L'inserimento di questa frase vi permetterà di trasferire i vostri fondi dal vostro portafoglio hardware al portafoglio corrente.",
   "transfer.instructions.hardware.disclaimer.instructions2": "Se si utilizza questa funzione, si dovrebbe generare una nuova frase di recupero per il portafoglio hardware. Se non sapete perché o come farlo, vi raccomandiamo di non utilizzare questa funzione.",
@@ -293,13 +295,14 @@
   "transfer.legacy.daedalus.12word": "12-parole Portafoglio Daedalus",
   "transfer.legacy.daedalus.title": "Portafoglio Daedalus legacy",
   "transfer.legacy.icarus.title": "Icaro/Yoroi Wallet",
-  "transfer.rewards.paper.label": "Rewards from paper wallet",
-  "transfer.rewards.regular.label": "Rewards from recovery phrase",
+  "transfer.rewards.paper.label": "Ricompense da portafoglio di carta",
+  "transfer.rewards.regular.label": "Ricompense dalla frase di recupero",
   "transfer.summary.addressFrom.label": "Da",
   "transfer.summary.finalBalance.label": "Saldo finale",
   "transfer.summary.recoveredBalance.label": "Saldo recuperato",
   "transfer.summary.transactionFee.label": "Commissioni di transazione",
   "transfer.summary.transferButton.label": "Trasferimento fondi",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL copiato con successo",
   "uri.display.dialog.title": "URL generato",
   "uri.display.dialog.usabilityWarning": "Questo link può essere aperto solo da utenti che abbiano Yoroi installato sul loro browser",
@@ -323,8 +326,8 @@
   "wallet.add.optionDialog.connect.hw.ledger.title": "Portafoglio Hardware Ledger",
   "wallet.add.optionDialog.connect.hw.trezor.learnMoreText": "Un portafoglio hardware Trezor è un piccolo dispositivo USB che aggiunge un ulteriore livello di sicurezza al tuo portafoglio. Esso è più sicuro perché la tua chiave privata non esce mai dal portafoglio hardware. Ciò protegge i tuoi fondi anche nel caso che il tuo computer fosse compromesso da malware o da tentativi di phishing o da altri attacchi.",
   "wallet.add.optionDialog.connect.hw.trezor.title": "Portafoglio Hardware Trezor",
-  "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
-  "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
+  "wallet.add.optionDialog.create.normalWallet.description": "Un portafoglio standard sostenuto da una frase di recupero.",
+  "wallet.add.optionDialog.create.paperWallet.description": "I portafogli di carta possono essere creati anche su dispositivi non collegati a Internet, il che li rende adatti per la conservazione a freddo monouso.",
   "wallet.add.optionDialog.restore.dialogTitle": "Ripristina portafoglio",
   "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
   "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Le autorizzazioni necessarie non sono state concesse dall'utente. Per favore riprova.",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Operazione annullata sul dispositivo Ledger.",
   "wallet.hw.ledger.common.error.102": "Operazione annullata dall'utente.",
   "wallet.hw.ledger.common.error.103": "Il dispositivo Ledger è bloccato, sbloccarlo e riprovare.",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Portafoglio era-Byron",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
+  "wallet.transfer.deregister.deregister": "Deregister",
+  "wallet.transfer.deregister.keep": "Keep registered",
+  "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
+  "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
+  "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Qualsiasi richiesta di ADA verrà trasferito sul portafoglio selezionato",
   "wallet.undelegation.transaction.explanationLine1": "NON è necessario rimuovere la delega prima di cambiare pool",
   "wallet.undelegation.transaction.explanationLine2": "Ci vorranno 2 epoche dopo la fine dell'epoca attuale perché il ritiro delega abbia effetto",
