--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "Foutieve herstelzin ingevoerd, controleer deze.",
   "api.errors.invalidWitnessError": "De ondertekening is ongeldig.",
   "api.errors.noInputsError": "De portemonnee, teruggezet met behulp van uw herstelzin, is leeg. Controleer de herstelzin en probeer het opnieuw.",
+  "api.errors.noOutputsError": "Transactie vereist minimaal 1 bestemming, maar er is geen bestemming toegevoegd",
   "api.errors.pendingTransactionError": "Fout tijdens het vernieuwen van lopende transacties.",
   "api.errors.poolMissingApiError": "Kon deze Stakepool niet vinden. Controleer de ID nogmaals en controleer of de Stakepool niet is afgemeld.",
   "api.errors.rollbackApiError": "Terugdraaien is gedetecteerd.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "Verwijder",
   "global.labels.rewardsLabel": "Beloningen",
   "global.labels.save": "Bewaar",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Opwaarderen",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "简体中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "Herstelde balans",
   "transfer.summary.transactionFee.label": "Transactiekosten",
   "transfer.summary.transferButton.label": "Versturen Fondsen",
+  "upgradetx.explanation": "We hebben een aantal ADA gevonden in uw portemonnee uit het Byron-tijdperk. Wilt u deze overzetten naar uw nieuwe Shelley-portemonnee?",
   "uri.display.dialog.copy.notification": "URL succesvol gekopieerd",
   "uri.display.dialog.title": "Maar een URL aan",
   "uri.display.dialog.usabilityWarning": "Deze link kan alleen geopend worden door gebruikers die Yoroi in hun browser hebben geïnstalleerd",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "De upgrade van het Shelley-protocol voegt een nieuw type Shelley-portefeuille toe dat delegatie ondersteunt.",
   "wallet.deprecation.byronLine2": "Om uw ADA te delegeren, moet u upgraden naar een Shelley-portemonnee.",
   "wallet.hw.common.error.101": "Vereiste toestemming was niet gegeven door de gebruiker, Probeer het opnieuw.",
+  "wallet.hw.incorrectDevice": "Onjuist apparaat gedetecteerd. Verwachte het apparaat {expectedDeviceId}, maar kreeg apparaat {responseDeviceId}. Sluit het juiste apparaat aan",
+  "wallet.hw.incorrectVersion": "Onjuiste versie van het apparaat gedetecteerd. We ondersteunen versie {supportedVersions} maar u heeft versie {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Operatie afgebroken op het Ledger apparaat.",
   "wallet.hw.ledger.common.error.102": "Operatie afgebroken door de gebruiker.",
   "wallet.hw.ledger.common.error.103": "Ledger apparaat is op slot, haal het van slot af en probeer het opnieuw.",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Opnames",
   "wallet.transfer.cards.byron": "Byron-tijdperk Portemonnee",
   "wallet.transfer.cards.shelley": "Shelley-tijdperk portemonnee",
+  "wallet.transfer.deregister.deregister": "Uitschrijven",
+  "wallet.transfer.deregister.keep": "Blijf ingeschreven",
+  "wallet.transfer.deregister.line1": "Bij het opnemen van beloningen heeft u ook de mogelijkheid om uw \"stem\"sleutel uit te schrijven",
+  "wallet.transfer.deregister.line2": "Als u Stakepool sleutel afmeldt, krijgt u uw aanbetaling terug en kunt u de sleutel van elke pool ongedaan maken",
+  "wallet.transfer.deregister.line3": "Als u de Stakepool sleutel bewaart, kunt u de beloningen opnemen, maar ook doorgaan met delegeren naar dezelfde pool",
+  "wallet.transfer.deregister.line4": "U dient zich NIET uit te schrijven als deze Stakepool sleutel wordt gebruikt als de beloningsrekening van een Stakepool, omdat hierdoor alle Stakepool exploitant beloningen rechtstreeks naar de schatkist worden gestuurd",
+  "wallet.transfer.deregister.title": "Ook de Stakepool sleutel uitschrijven?",
   "wallet.transfer.instruction": "Elke ADA die wordt geclaimd, wordt overgebracht naar de, huidige, gekozen Portemonnee",
   "wallet.undelegation.transaction.explanationLine1": "U hoeft de delegatie NIET ongedaan te maken om van Stakepool te wisselen",
   "wallet.undelegation.transaction.explanationLine2": "Het duurt 2 Epochs (tijdperken) na het einde van het huidige tijdvak om de delegatie in werking te laten treden",
