--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "无效助记词，请检查",
   "api.errors.invalidWitnessError": "签名无效。",
   "api.errors.noInputsError": "从恢复短语恢复的钱包是空的。 请先检查您的恢复短语，并再次尝试恢复。",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "更新暂挂交易时发生错误。",
   "api.errors.poolMissingApiError": "找不到该权益池。再次检查ID，确保该权益池没有取消注册。",
   "api.errors.rollbackApiError": "检测到回返。",
@@ -96,6 +97,7 @@
   "global.labels.remove": "移除",
   "global.labels.rewardsLabel": "奖励",
   "global.labels.save": "保存",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "升级",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "恢复的余额",
   "transfer.summary.transactionFee.label": "交易手续费",
   "transfer.summary.transferButton.label": "转移资金",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "成功复制链接地址",
   "uri.display.dialog.title": "生成链接",
   "uri.display.dialog.usabilityWarning": "只有在浏览器上安装了Yoroi的用户才能打开此链接",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "Shelly版本升级增加了新的Shelly钱包类型，能够支持委托。",
   "wallet.deprecation.byronLine2": "如欲委托ADA，请升级至支持Shelly版本的钱包。",
   "wallet.hw.common.error.101": "用户未授予必要的权限。请重试。",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Ledger设备上的操作已取消。",
   "wallet.hw.ledger.common.error.102": "操作被用户取消。",
   "wallet.hw.ledger.common.error.103": "Ledger设备已锁定，请解锁后重试。",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "赎回",
   "wallet.transfer.cards.byron": "Byron时期钱包",
   "wallet.transfer.cards.shelley": "Shelly时期钱包",
+  "wallet.transfer.deregister.deregister": "Deregister",
+  "wallet.transfer.deregister.keep": "Keep registered",
+  "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
+  "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
+  "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "所有的ADA会转移到你目前选择的钱包中",
   "wallet.undelegation.transaction.explanationLine1": "切换权益池之前，您无需先解除委托",
   "wallet.undelegation.transaction.explanationLine2": "撤销委托要在当前时代结束后的2个时代才能生效",
