--- a/app/i18n/locales/el-GR.json
+++ b/app/i18n/locales/el-GR.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "Εισαγωγή λανθασμένης φράσης, παρακαλώ ελέγξτε.",
   "api.errors.invalidWitnessError": "Η υπογραφή δεν ισχύει.",
   "api.errors.noInputsError": "Το πορτοφόλι που επαναφέρατε από τη φράση ανάκτησης είναι άδειο. Παρακαλώ ελέγξτε τη φράση ανάκτησης σας και προσπαθήστε ξανά.",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "Σφάλμα τη στιγμή ενημέρωσης συναλλαγών που είναι εκκρεμείς.",
   "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Rollback was detected.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "Αφαίρεσε",
   "global.labels.rewardsLabel": "Rewards",
   "global.labels.save": "Αποθήκευση",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Αναβάθμιση",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "Ανακτηθέν υπόλοιπο",
   "transfer.summary.transactionFee.label": "Προμήθειες συναλλαγής",
   "transfer.summary.transferButton.label": "Μεταφορά Χρημάτων",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "Ενιαίος Εντοπιστής Πόρων (URL) αντιγράφηκε πετυχημένα",
   "uri.display.dialog.title": "Ενιαίος Εντοπιστής Πόρων (URL) δημιουργήθηκε",
   "uri.display.dialog.usabilityWarning": "Αυτός ο σύνδεσμος μπορεί μόνο να ανοιχθεί από χρήστες που έχουν το Yoroi εγκατεστημένο στον περιηγητή τους",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
   "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Απαραίτητες άδειες δεν παραχωρήθηκαν από το χρήστη. Παρακαλώ προσπαθήστε ξανά.",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Η διαδικασία ακυρώθηκε στη Ledger συσκευή.",
   "wallet.hw.ledger.common.error.102": "Η διαδικασία ακυρώθηκε από τον χρήστη.",
   "wallet.hw.ledger.common.error.103": "Η Ledger συσκευή είναι κλειδωμένη, παρακαλώ ξεκλειδώστε τη και προσπαθήστε ξανά.",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
+  "wallet.transfer.deregister.deregister": "Deregister",
+  "wallet.transfer.deregister.keep": "Keep registered",
+  "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
+  "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
+  "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Όσα ADA δηλώθηκαν θα μεταφερθούν στο τρέχων επιλεγμένο πορτοφόλι σας",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
