--- a/app/i18n/locales/ja-JP.json
+++ b/app/i18n/locales/ja-JP.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "入力されたフレーズは無効です。もう一度確認してください。",
   "api.errors.invalidWitnessError": "署名が無効です。",
   "api.errors.noInputsError": "ご指定のダイダロスウォレットに残高がありません。復元フレーズをご確認ください。",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "保留トランザクション更新中にエラーが発生しました。",
   "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "ロールバックを検出しました。",
@@ -96,6 +97,7 @@
   "global.labels.remove": "削除",
   "global.labels.rewardsLabel": "報酬",
   "global.labels.save": "保存",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "アップグレード",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "復元後残高",
   "transfer.summary.transactionFee.label": "トランザクション手数料",
   "transfer.summary.transferButton.label": "送金",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URLをコピーしました",
   "uri.display.dialog.title": "生成されたURL",
   "uri.display.dialog.usabilityWarning": "このリンクは、ヨロイをWebブラウザーの拡張機能としてインストールしたユーザーのみアクセスできます",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
   "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "アクセス許可が得られませんでした。再試行してください。",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Ledgerデバイス上で操作がキャンセルされました。",
   "wallet.hw.ledger.common.error.102": "操作はユーザーによってキャンセルされました。",
   "wallet.hw.ledger.common.error.103": "Ledgerデバイスのロックを解除し、再度操作を行ってください。",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "従来式(Byron)ウォレット",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
+  "wallet.transfer.deregister.deregister": "Deregister",
+  "wallet.transfer.deregister.keep": "Keep registered",
+  "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
+  "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
+  "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "請求されたADAを、現在選択しているウォレットに送信します",
   "wallet.undelegation.transaction.explanationLine1": "ステークプールを切り替えるために委任を解除する必要はありません。",
   "wallet.undelegation.transaction.explanationLine2": "委任の解除は、現在のエポック終了後、2エポックかかります。",
