--- a/app/i18n/locales/ko-KR.json
+++ b/app/i18n/locales/ko-KR.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "유효하지 않은 구절입니다. 다시 확인해 주십시오.",
   "api.errors.invalidWitnessError": "서명이 잘못되었습니다.",
   "api.errors.noInputsError": "복구 구절에서 복구시킨 지갑이 비어 있습니다. 복구 구절을 확인하시고 복구를 다시 시도해주세요.",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "보류 중인 거래를 업데이트하는 중 오류가 발생했습니다.",
   "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "롤백이 감지되었습니다.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "제거",
   "global.labels.rewardsLabel": "보상",
   "global.labels.save": "저장",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "복구된 잔액",
   "transfer.summary.transactionFee.label": "거래 수수료",
   "transfer.summary.transferButton.label": "자금 이체",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL이 성공적으로 복사됨",
   "uri.display.dialog.title": "URL 생성하기",
   "uri.display.dialog.usabilityWarning": "이 링크는 브라우저에 요로이가 설치한 사용자만 열 수 있습니다.",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
   "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "필요한 권한이 주어지지 않았습니다. 다시 시도해 주십시오.",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Ledger 디바이스에서 작업이 취소되었습니다.",
   "wallet.hw.ledger.common.error.102": "사용자에 의해 작업이 취소되었습니다.",
   "wallet.hw.ledger.common.error.103": "Ledger 디바이스가 잠겨있습니다, 잠금을 해제하신 후 재시도하세요.",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "바이런 시대 지갑",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
+  "wallet.transfer.deregister.deregister": "Deregister",
+  "wallet.transfer.deregister.keep": "Keep registered",
+  "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
+  "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
+  "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "복구된 모든 ADA는 현재 선택된 지갑으로 전송됩니다.",
   "wallet.undelegation.transaction.explanationLine1": "위임할 풀을 바꾸기 위해서 위임 취소를 할 필요는 없습니다.",
   "wallet.undelegation.transaction.explanationLine2": "위임 취소는 해당 에포크 종료 후 2개 에포크가 지나야 처리됩니다.",
