--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "\nFrase inserida é inválida, por favor, verifique.",
   "api.errors.invalidWitnessError": "A assinatura é inválida.",
   "api.errors.noInputsError": "A carteira restaurada a partir de sua frase de recuperação está vazia. Por favor, verifique sua frase de recuperação e tente a restauração novamente.",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "Erro ao atualizar transações pendentes.",
   "api.errors.poolMissingApiError": "Não foi possível encontrar este pool. Verifique duas vezes o ID e verifique se o pool não foi cancelado o registro.",
   "api.errors.rollbackApiError": "Uma reversão foi detectada.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "Remover",
   "global.labels.rewardsLabel": "Recompensas",
   "global.labels.save": "Salvar",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "Saldo recuperado",
   "transfer.summary.transactionFee.label": "Taxas de transação",
   "transfer.summary.transferButton.label": "Transferir fundos",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL copiada com sucesso",
   "uri.display.dialog.title": "URL gerada",
   "uri.display.dialog.usabilityWarning": "Esse link pode ser aberto apenas por usuários com o Yoroi instalado no navegador",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "A atualização do protocolo Shelley adiciona um novo tipo de carteira Shelley que suporta delegação.",
   "wallet.deprecation.byronLine2": "Para delegar seu ADA, você precisará atualizar para uma carteira Shelley.",
   "wallet.hw.common.error.101": "As permissões necessárias não foram concedidas pelo usuário. Por favor tente novamente.",
+  "wallet.hw.incorrectDevice": "Dispositivo incorreto detectado. Dispositivo esperado {expectedDeviceId}, mas obtido dispositivo {responseDeviceId}. Por favor, conecte o dispositivo correto",
+  "wallet.hw.incorrectVersion": "Versão incorreta do dispositivo detectada. Oferecemos suporte à versão {supportedVersions}, mas você possui a versão {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Operação cancelada no dispositivo Ledger.",
   "wallet.hw.ledger.common.error.102": "Operação cancelada pelo usuário.",
   "wallet.hw.ledger.common.error.103": "O Dispositivo Ledger está bloqueado, por favor desbloqueie-o e tente novamente.",
@@ -531,7 +536,7 @@
   "wallet.receive.page.noResultsFoundLabel": "Resultados não encontrados",
   "wallet.receive.page.notFoundAnyAddresses": "Não encontramos nenhum endereço coincidindo com seu filtro.",
   "wallet.receive.page.outputAmountUTXO": "Balanço (soma UTXO)",
-  "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
+  "wallet.receive.page.rewardAddressLine1": "Seu endereço de recompensas armazena suas recompensas e é usado para validar qualquer mudança na suas preferências de delegação",
   "wallet.receive.page.rewardAddressLine2": "Você não pode enviar ADA para um endereço de recompensa, mas mostramos esse endereço para fins de auditoria pessoal",
   "wallet.receive.page.unmangeLabel": "Preferência de delegação correta",
   "wallet.receive.page.verifyAddressLabel": "Verificar endereço",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Retiradas",
   "wallet.transfer.cards.byron": "Carteira Byron-era",
   "wallet.transfer.cards.shelley": "Carteira era-Shelley",
+  "wallet.transfer.deregister.deregister": "Desregistrar",
+  "wallet.transfer.deregister.keep": "Manter registrado",
+  "wallet.transfer.deregister.line1": "Ao retirar as recompensas, você também tem a opção de desregistrar a chave de staking",
+  "wallet.transfer.deregister.line2": "Desregistrar a chave de staking devolverá seu depósito e cancelará a delegação para qualquer pool",
+  "wallet.transfer.deregister.line3": "Manter a chave de staking permitirá que você retire as recompensas, mas continue delegando para o mesmo pool",
+  "wallet.transfer.deregister.line4": "Você NÃO deve cancelar o registro se esta chave de staking se ela estiver sendo usada como uma conta de recompensa da sua pool, isso fará com que todas as recompensas do operador da pool sejam enviadas diretamente para o tesouro",
+  "wallet.transfer.deregister.title": "Também desregistrar a chave de staking?",
   "wallet.transfer.instruction": "Toda ADA solicitada será transferida para sua carteira selecionada recentemente",
   "wallet.undelegation.transaction.explanationLine1": "Você NÃO precisa desfazer a delegação para mudar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Levará duas épocas após o final da época atual para que a remoção da delegação entre em vigor",
