--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "Введена неверная фраза, пожалуйста, проверьте.",
   "api.errors.invalidWitnessError": "Подпись недействительна.",
   "api.errors.noInputsError": "Кошелек, восстановленный из Вашей фразы восстановления, пуст. Пожалуйста, проверьте Вашу фразу восстановления и повторите попытку восстановления снова.",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "Ошибка при обновлении ожидающих транзакций.",
   "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "Кратковременное перестроение цепи.",
@@ -96,6 +97,7 @@
   "global.labels.remove": "Удалить",
   "global.labels.rewardsLabel": "Награды",
   "global.labels.save": "Сохранить",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "Восстановленный баланс",
   "transfer.summary.transactionFee.label": "Комиссия",
   "transfer.summary.transferButton.label": "Перевести средства",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL успешно скопирован",
   "uri.display.dialog.title": "Сгенерированный URL",
   "uri.display.dialog.usabilityWarning": "Эту ссылку могут открыть только пользователи, у которых в браузере установлено Yoroi-расширение",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
   "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Необходимые разрешения не были предоставлены пользователем. Повторите попытку.",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Операция была отменена на устройстве Ledger.",
   "wallet.hw.ledger.common.error.102": "Операция отменена пользователем.",
   "wallet.hw.ledger.common.error.103": "Устройство Ledger заблокировано, пожалуйста, разблокируйте его и повторите попытку.",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Кошелек Byron-эры",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
+  "wallet.transfer.deregister.deregister": "Deregister",
+  "wallet.transfer.deregister.keep": "Keep registered",
+  "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
+  "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
+  "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Любая заявленная ADA будет переведена на Ваш текущий выбранный кошелек",
   "wallet.undelegation.transaction.explanationLine1": "Вам НЕ нужно отменять делегирование перед сменой пула",
   "wallet.undelegation.transaction.explanationLine2": "Чтобы разделегирование вступило в силу необходимо 2 эпохи после окончания текущей эпохи",
