--- a/app/i18n/locales/zh-Hant.json
+++ b/app/i18n/locales/zh-Hant.json
@@ -30,6 +30,7 @@
   "api.errors.invalidMnemonicError": "輸入的短語無效, 請檢查",
   "api.errors.invalidWitnessError": "簽章無效。",
   "api.errors.noInputsError": "從恢復短語恢復的錢包是空的。請先檢查您的恢復短語，並再次嘗試恢復。",
+  "api.errors.noOutputsError": "Transaction requires at least 1 output, but no output was added",
   "api.errors.pendingTransactionError": "更新擱置的交易時出現錯誤。",
   "api.errors.poolMissingApiError": "Could not find this pool. Double-check the ID and make sure the pool was not deregistered.",
   "api.errors.rollbackApiError": "檢測到回返。",
@@ -96,6 +97,7 @@
   "global.labels.remove": "移除",
   "global.labels.rewardsLabel": "Rewards",
   "global.labels.save": "儲存",
+  "global.labels.shelleyLabel": "Shelley",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
@@ -300,6 +302,7 @@
   "transfer.summary.recoveredBalance.label": "恢復的餘額",
   "transfer.summary.transactionFee.label": "交易費用",
   "transfer.summary.transferButton.label": "轉移資金",
+  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "成功複製鏈接地址",
   "uri.display.dialog.title": "生成鏈接",
   "uri.display.dialog.usabilityWarning": "只有在瀏覽器上安裝了Yoroi的用戶才能打開此鏈接",
@@ -481,6 +484,8 @@
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
   "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "使用者未授予必要的許可權。請重試。",
+  "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
+  "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
   "wallet.hw.ledger.common.error.101": "Ledger上的操作已取消。",
   "wallet.hw.ledger.common.error.102": "操作被用戶取消。",
   "wallet.hw.ledger.common.error.103": "Ledger已鎖定，請解鎖並重試。",
@@ -674,6 +679,13 @@
   "wallet.transaction.withdrawalsLabel": "Withdrawals",
   "wallet.transfer.cards.byron": "Byron-era wallet",
   "wallet.transfer.cards.shelley": "Shelley-era wallet",
+  "wallet.transfer.deregister.deregister": "Deregister",
+  "wallet.transfer.deregister.keep": "Keep registered",
+  "wallet.transfer.deregister.line1": "When withdrawing rewards, you also have the option to deregister the staking key",
+  "wallet.transfer.deregister.line2": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool",
+  "wallet.transfer.deregister.line3": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool",
+  "wallet.transfer.deregister.line4": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent directly to the treasury",
+  "wallet.transfer.deregister.title": "Also deregister the staking key?",
   "wallet.transfer.instruction": "Any ADA claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
