--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -102,7 +102,7 @@
   "global.labels.spendingKeyHash": "Spending key hash",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
-  "global.labels.stakingKeyPointer": "Staking key pointer",
+  "global.labels.stakingKeyPointer": "Key registration pointer",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
