--- a/app/i18n/locales/en-US.json
+++ b/app/i18n/locales/en-US.json
@@ -88,6 +88,7 @@
   "global.labels.error": "Error",
   "global.labels.finish": "Finish",
   "global.labels.goBack": "Go back",
+  "global.labels.keyRegistrationPointer": "Key registration pointer",
   "global.labels.loadMore": "Load more",
   "global.labels.memo": "Memo",
   "global.labels.next": "Next",
@@ -102,7 +103,6 @@
   "global.labels.spendingKeyHash": "Spending key hash",
   "global.labels.stakingKey": "Staking key",
   "global.labels.stakingKeyHash": "Staking key hash",
-  "global.labels.stakingKeyPointer": "Key registration pointer",
   "global.labels.upgrade": "Upgrade",
   "global.language.chinese.simplified": "简体中文",
   "global.language.chinese.traditional": "繁體中文",
